--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,36 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 /* *{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 } */
+
+:root {
+  --primary-color: #b61926;
+  --primary-color1: #ba2d39;
+  --primary-color2: #85282f;
+}
+
+/* Navbar */
+
+.nav-logo {
+  width: 48px;
+  height: 48px;
+  background-color: var(--primary-color);
+}
+
+.carousel-indicators {
+  position: absolute;
+  bottom: -44px;
+}
+#carousel-home ul li {
+  height: 12px !important;
+  width: 12px !important;
+  border-radius: 12px !important;
+}
+
+.movi-cards{
+  overflow-x: scroll;
+}
+
+.movi-cards card{
+  width: 160px;
+}
